# train_tower

./: .gitignore  .gitmodules  ATTENTION  README.md  idea.md  pyproject.toml
configs/deepspeed/: zero2.json
configs/train/: continuous.yaml  generation_pt.yaml  understanding_warmup.yaml  unified_mt.yaml  unified_sft.yaml  world_pt.yaml  world_pt_h800.yaml  world_pt_h800_curriculum.yaml
exports/viz/: stage_selections.yml
note/: data_download.md  dataset.yml  datasetlist  processed_registry.py  role.yml  tower.yml  tower_train.yml  train.yml
scripts/: convert.sh  estimate_params.py  fetch_tokenizer.sh  h100_common.sh  h100_smoke.sh  h100_train.sh  setup.sh  train_continuous.sh  train_env.sh  train_gen_pt.sh  train_mt.sh  train_pretrain.sh  train_sft.sh  train_smoke.sh  train_tower_world.sh  train_uw.sh  vendor_third_party.sh  viz_data.sh
tests/: test_curriculum_config.py  test_tower_efficiency.py  test_vision_batch.py
tower/: __init__.py  cli.py  config.py  paths.py  registry.py  schema.py
tower/convert/: base.py  blip3o_tar.py  coco_pool.py  hf_parquet.py  llava_json.py  parallel.py  runner.py
tower/io/: audio.py  images.py  json_stream.py  writer.py
tower/train/: config.py  curriculum.py  dataset.py  freeze.py  losses.py  registry.py  tasks.py  trainer.py  vision_batch.py
tower/unify/: build.py  compat.py  export.py  flow_tower.py  forward.py  model.py  tower_config.py  tower_exits.py  tower_masking.py  train_model.py
tower/viz/: __init__.py  cli.py  data_stats.py  plots.py  selection.py  stages.py  training_metrics.py
(+5 files in other folders)
