[project]
name = "train-tower"
version = "0.1.0"
description = "Data conversion pipeline for native multimodal training (NEO / SenseNova-U1 format)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "ijson>=3.2.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8.0",
]
train = [
    "torch>=2.5.1",
    "torchvision>=0.20.0",
    "transformers>=4.57.0",
    "deepspeed>=0.15.0",
    "accelerate>=1.0.0",
    "tensorboard>=2.14.0",
    "packaging>=23.0",
    "safetensors>=0.4.0",
]

[project.scripts]
tower = "tower.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tower*"]
namespaces = false
